--- a/FRISS.Components.Utilities/FRISS.Components.Utilities.csproj
+++ b/FRISS.Components.Utilities/FRISS.Components.Utilities.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -19,5 +19,7 @@
 		<PackageReference Include="NLog.WindowsEventLog" Version="4.7.2" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="3.1.0.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+		<PackageReference Include="EnyimMemcachedCore" Version="2.5.3" />
+
 	</ItemGroup>
 </Project>
