--- a/FRISS.DataAccessLayer/FRISS.DataAccessLayer.csproj
+++ b/FRISS.DataAccessLayer/FRISS.DataAccessLayer.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FRISS.Common\FRISS.Common.csproj" />
+    <ProjectReference Include="..\FRISS.Components.Utilities\FRISS.Components.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
