--- a/FRISS.NamesSimilarity/FRISS.NamesSimilarity.csproj
+++ b/FRISS.NamesSimilarity/FRISS.NamesSimilarity.csproj
@@ -1,11 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FRISS.Common\FRISS.Common.csproj" />
   </ItemGroup>
 
 </Project>
