--- a/src/Fraud.Api.Matching/Properties/launchSettings.json
+++ b/src/Fraud.Api.Matching/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:1523",
-      "sslPort": 44300
+      "applicationUrl": "http://localhost:18550",
+      "sslPort": 44326
     }
   },
   "profiles": {
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "test": {
+    "Fraud.Api.Matching": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
