--- a/src/Fraud.Component.DataAccessLayer/Fraud.Component.DataAccessLayer.csproj
+++ b/src/Fraud.Component.DataAccessLayer/Fraud.Component.DataAccessLayer.csproj
@@ -6,9 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.13" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.13" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Scrutor" Version="3.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
