--- a/src/Fraud.Component.Matching/Fraud.Component.Matching.csproj
+++ b/src/Fraud.Component.Matching/Fraud.Component.Matching.csproj
@@ -6,10 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+    <PackageReference Include="Scrutor" Version="3.3.0" />
+
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Fraud.Component.Common\Fraud.Component.Common.csproj" />
+    <ProjectReference Include="..\Fraud.Component.Utilities\Fraud.Component.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
