--- a/src/Fraud.Api.Matching/Fraud.Api.Matching.csproj
+++ b/src/Fraud.Api.Matching/Fraud.Api.Matching.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>obj\Debug\net5.0\Fraud.Api.Matching.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
@@ -19,6 +23,10 @@
     <ProjectReference Include="..\Fraud.Component.DataAccessLayer\Fraud.Component.DataAccessLayer.csproj" />
     <ProjectReference Include="..\Fraud.Component.Matching\Fraud.Component.Matching.csproj" />
     <ProjectReference Include="..\Fraud.Component.Utilities\Fraud.Component.Utilities.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Utils\Swagger\" />
   </ItemGroup>
 
 </Project>
