--- a/src/Fraud.Component.Utilities/Fraud.Component.Utilities.csproj
+++ b/src/Fraud.Component.Utilities/Fraud.Component.Utilities.csproj
@@ -17,6 +17,9 @@
 		<PackageReference Include="NLog.WindowsEventLog" Version="4.7.2" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="3.1.0.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.2.3" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.2" />
+		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.2.3" />
 		<PackageReference Include="EnyimMemcachedCore" Version="2.5.3" />
 
 	</ItemGroup>
