--- a/src/Fraud.Api.Matching/Fraud.Api.Matching.csproj
+++ b/src/Fraud.Api.Matching/Fraud.Api.Matching.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -23,10 +23,6 @@
     <ProjectReference Include="..\Fraud.Component.DataAccessLayer\Fraud.Component.DataAccessLayer.csproj" />
     <ProjectReference Include="..\Fraud.Component.Matching\Fraud.Component.Matching.csproj" />
     <ProjectReference Include="..\Fraud.Component.Utilities\Fraud.Component.Utilities.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Utils\Swagger\" />
   </ItemGroup>
 
 </Project>
