--- a/src/Fraud.Api.Matching/Fraud.Api.Matching.csproj
+++ b/src/Fraud.Api.Matching/Fraud.Api.Matching.csproj
@@ -6,6 +6,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>obj\Debug\net5.0\Fraud.Api.Matching.xml</DocumentationFile>
+    <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
